--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,64 +5,49 @@ html, body {
 
 .row {
 	width: 100%;
+	margin: 0 auto;
 }
 
 /* Navbar */
 
-#nav-wrap ul, #nav-wrap li, #nav-wrap a {
-	margin: 0;
-	padding: 0;
-	border: none;
-	outline: none;
+.opaque-navbar {
+    background-color: rgba(0,0,0,0.0);
+    height: 60px;
+    border-bottom: 0px;
+    transition: background-color .5s ease 0s;
 }
 
-#nav-wrap {
-   	font: 12px bold 'opensans-bold', sans-serif;
-   	width: 100%;
-   	text-transform: uppercase;
-   	letter-spacing: 2.5px;
-   	margin: 0 auto;
-   	z-index: 100;
-   	position: fixed;
-   	left: 0;
-   	top: 0;
+.opaque-navbar.opaque {
+    background-color: black;
+    height: 60px;
+    transition: background-color .5s ease 0s;
 }
 
-.opaque { background-color: #333; }
-
-ul#nav {
-  	min-height: 48px;
-   	width: auto;
-   	text-align: center;
+ul.dropdown-menu {
+    background-color: black;
 }
 
-ul#nav li {
-   	position: relative;
-   	list-style: none;
-   	height: 48px;
-   	display: inline-block;
+
+@media (max-width: 992px) {
+  body {
+    background:red;
+  }
+  .opaque-navbar {
+    background-color: black;
+    height: 60px;
+    transition: background-color .5s ease 0s;
+	}
 }
 
-ul#nav li a {
-   	display: inline-block;
-   	padding: 8px 13px;
-   	line-height: 32px;
-	text-decoration: none;
-   	text-align: left;
-   	color: #fff;
+.navbar-inverse .navbar-nav>li>a{
+   font: 1.2em 'opensans-bold', sans-serif;
+   color: white;
 }
 
-ul#nav li a:active { 
-	background-color: transparent !important;
-}
-
-ul#nav li a:hover { 
-	background-color: transparent !important;
-}
-
-ul#nav li.current a { 
-	color: #F06000; /* orange */
-	background-color: transparent !important;
+.navbar-inverse .navbar-brand{
+   color: white;
+   font: 2em 'opensans-bold', sans-serif;
+   padding-top: 2px;
 }
 
 /* HEADER */
@@ -70,7 +55,7 @@ ul#nav li.current a {
 /* Intro */
 
 #introduction-text h1 {
-	font: 5em 'opensans-bold', sans-serif;f;
+	font: 4.5em 'opensans-bold', sans-serif;f;
 	text-shadow: 0px 1px 3px black;
 }
 
@@ -102,7 +87,7 @@ ul#nav li.current a {
 }
 
 hr {
-	width: 25%;
+	width: 23%;
 	border: 1px solid white;
 }
 
@@ -151,6 +136,7 @@ hr {
 #about {
 	width: 100%;
 	background-color: #0d0d26; /* Dark mauve */
+	position: relative;
 }
 
 /* Profile pic */
@@ -160,12 +146,13 @@ hr {
 	text-align: center;
 }
 
+
 #profile {
 	position: relative;
 	width: 200px;
 	height: 200px;
 	border-radius: 50%;
-	border: 4px solid #f5f5f0;
+	border: 3px solid #f5f5f0;
 }
 
 /* Title */
@@ -200,7 +187,7 @@ hr {
 }
 
 .text p {
-	font: 1.3em 'opensans-bold', sans-serif;
+	font: 1.1em 'opensans-bold', sans-serif;
 	color: white;
 }
 
@@ -253,20 +240,25 @@ hr {
 	display: inline-block;
 }
 
-.place p {
-	font: 1.3em 'opensans-bold', sans-serif;
+.years p {
+	font: 1.1em 'opensans-bold', sans-serif;
 	color: #666666;
+	display: inline-block;
+}
+
+.inline {
+	display: inline-block;
 }
 
 .details p {
-	font: 1.3em 'opensans-bold', sans-serif;
+	font: 1.1em 'opensans-bold', sans-serif;
 	color: #666666;
 }
 
 .details {
 	padding-right: 20%;
-	padding-top: 10px;
-	padding-bottom: 30px;
+	padding-top: 5px;
+	padding-bottom: 10px;
 }
 
 #experience {
@@ -275,8 +267,11 @@ hr {
 }
 
 #skills {
-	padding-top: 15px;
 	padding-left: 10%;
+}
+
+.rowSkills {
+	padding-bottom: 6%;
 }
 
 /* Skillbars */
@@ -286,12 +281,18 @@ hr {
 .containerSkill {
   width: 100%; 
   background-color: #ddd; /* Grey */
+  height: 30px;
+}
+
+#rowSkills {
+	padding-bottom: 6%;
 }
 
 .skill {
   text-align: right;
   padding: 10px;
   color: white;
+  height: 30px;
 }
 
 .html {width: 90%; background-color: #3D9970;} 
@@ -309,3 +310,43 @@ hr {
 .english {width: 95%; background-color: #FF4136 ;}
 .spanish {width: 70%; background-color: #FF4136 ;}
 .dutch {width: 40%; background-color: #FF4136 ;}
+
+/* Carousel */
+
+#titlePortfolio {
+	padding-top: 6%;
+	padding-bottom: 3%;
+	color: #F06000; /* Orange */
+	text-align: center;
+}
+
+#titlePortfolio p {
+	font: 1.1em 'opensans-bold', sans-serif;
+	color: white;
+}
+
+#portfolio {
+	width: 100%;
+	background-color: #0d0d26; /* Dark mauve */
+	padding-top: 2%;
+	padding-bottom: 3%;
+}
+
+.container--head {
+	width: 50%;
+	max-height: 20%;
+	margin: 0 auto;
+}
+
+.carousel-caption {
+	width: 50%;
+	background: black;
+	opacity: 0.5;
+	margin: 0 auto;
+	padding: 10px;
+	color: white;
+}
+
+.carousel-caption p {
+	font: 1.1em;
+}
